<resources>
    <string name="app_name">CruddyPizza</string>
    <string name="title_activity_main">Main</string>
    <string name="title_home">Promoted</string>
    <string name="title_menu">Menu</string>
    <string name="title_orders">Orders</string>
    <string name="title_settings">Settings</string>

    <!-- HomeFragment -->
    <string name="build_your_pizza">Build your own pizza</string>
    <string name="dollar_sign">$</string>

    <!-- MenuFragment -->
    <string name="starting_from">Starting from $</string>

    <!-- Settings -->
    <string name="language_header">Language</string>
    <string name="language_title">Default language action</string>

    <!-- BuildActivity -->
    <string name="title_activity_build">Build</string>
    <string name="size">Size</string>
    <string name="toppings">Toppings</string>
    <string name="my_pizza">My pizza</string>
    <string name="quantity">Quantity:</string>
    <string name="btn_continue">Continue</string>
    <string name="my_own_pizza">My own pizza</string>

    <!-- ConfirmOrderActivity -->
    <string name="order">Order</string>
    <string name="order_message">The pizza will be served shortly.\nThank you for your order.</string>
    <string name="ok">OK</string>
    <string name="total_dollar">Total $</string>
    <string name="order_detail">Order Detail</string>
    <string name="customer">Customer</string>
    <string name="add_to_order">Add to order</string>
    <string name="modify">Modify</string>
    <string name="remove">Remove</string>

    <!-- ContactActivity -->
    <string name="contact_info">Please enter contact information</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="prompt_email">Email</string>
    <string name="empty_message">The item cannot be empty.</string>

</resources>