<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:context=".BuildActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/tr1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/order_detail"
                android:textColor="#040404"
                android:textSize="20sp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TableRow
            android:id="@+id/tr2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/pizza_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                android:paddingLeft="5dp"
                android:text="@string/my_own_pizza"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tr3"
            android:layout_width="283dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/my_pizza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="myPizza"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tr4"
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:textSize="20sp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TableRow
            android:id="@+id/tr51"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                android:paddingLeft="5dp"
                android:text="@string/customer"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tr5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tr6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tr7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tr8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:textSize="20sp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TableRow
            android:id="@+id/tr81"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="5dp"
                android:textSize="20sp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TableRow
            android:id="@+id/tr_order"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical|right">
            <Button
                android:id="@+id/btnOrder"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/add_to_order" />
        </TableRow>
        <TableRow
            android:id="@+id/tr_modify"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical">
            <Button
                android:id="@+id/btnModify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:layout_span="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/modify" />

            <Button
                android:id="@+id/btnRemove"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:layout_span="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/remove" />
        </TableRow>
    </TableLayout>
    </LinearLayout>
</ScrollView>