<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dip"
    tools:context=".BuildActivity">
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TableRow
            android:id="@+id/tr1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:text="CRUDDY PIZZA BUILDER"
                android:textColor="#040404"
                android:textSize="20sp" />
        </TableRow>
        <TableRow
            android:id="@+id/tr2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                android:paddingLeft="5dp"
                android:text="@string/size"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </TableRow>
        <TableRow
            android:id="@+id/tr3"
            android:layout_width="283dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="258dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="224dp"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="224dp"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="224dp"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </TableRow>
        <TableRow
        android:id="@+id/tr4"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                android:paddingLeft="5dp"
                android:text="@string/toppings"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </TableRow>
        <TableRow
            android:id="@+id/tr6"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:id="@+id/tr7"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:id="@+id/tr8"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:id="@+id/tr9"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:id="@+id/tr10"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:id="@+id/tr11"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:id="@+id/tr12"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:background="?attr/colorPrimary"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/my_pizza" />
        </TableRow>
        <TableRow
            android:id="@+id/tr13"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:textSize="16sp"
                android:textColor="#040404" />
        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <TableRow
            android:id="@+id/tr14"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="#040404"
                android:layout_marginLeft="5dp"
                android:layout_weight="300"
                android:text="@string/quantity"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/btn_continue" />
        </TableRow>
    </TableLayout>
</ScrollView >